tests/basic/bad/test13.pepa
% File: tests/bad/test13.pepa
% Tau cannot be synchronised on, so cannot be passive
P = (tau, infty).P;
(P <> P)
